@@ -282,6 +282,9 @@ class Skin extends Linker {
 
 		$out->out( $out->mBodytext . "\n" );
 
+		// See self::afterContentHook() for documentation
+		$out->out ($this->afterContentHook());
+
 		$out->out( $this->afterContent() );
 
 		$out->out( $this->bottomScripts() );
@@ -750,6 +753,43 @@ END;
 
 	function getQuickbarCompensator( $rows = 1 ) {
 		return "<td width='152' rowspan='{$rows}'>&nbsp;</td>";
+	}
+
+	/**
+	 * This runs a hook to allow extensions placing their stuff after content
+	 * and article metadata (e.g. categories).
+	 * Note: This function has nothing to do with afterContent().
+	 *
+	 * This hook is placed here in order to allow using the same hook for all
+	 * skins, both the SkinTemplate based ones and the older ones, which directly
+	 * use this class to get their data.
+	 *
+	 * The output of this function gets processed in SkinTemplate::outputPage() for
+	 * the SkinTemplate based skins, all other skins should directly echo it.
+	 *
+	 * Returns an empty string by default, if not changed by any hook function.
+	 */
+	protected function afterContentHook () {
+		$data = "";
+
+		if (wfRunHooks ('SkinAfterContent', array (&$data))) {
+			// adding just some spaces shouldn't toggle the output
+			// of the whole <div/>, so we use trim() here
+			if (trim ($data) != "") {
+				// Doing this here instead of in the skins to
+				// ensure that the div has the same ID in all
+				// skins
+				$data = "<!-- begin SkinAfterContent hook -->\n" .
+					"<div id='mw-data-after-content'>\n" .
+					"\t$data\n" .
+					"</div>\n" .
+					"<!-- end SkinAfterContent hook -->\n";
+			}
+		} else {
+			wfDebug ('Hook SkinAfterContent changed output processing.');
+		}
+
+    return $data;
 	}
 
 	/**
