@@ -156,6 +156,7 @@ class ModernTemplate extends QuickTemplate {
 		<?php $this->html('bodytext') ?>
 		<div class='mw_clear'></div>
 		<?php if($this->data['catlinks']) { $this->html('catlinks'); } ?>
+		<?php $this->html ('dataAfterContent') ?>
 	</div><!-- mw_contentholder -->
 	</div><!-- mw_content -->
 	</div><!-- mw_contentwrapper -->
